<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="My Profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="Username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Jdoe"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="First Name:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="John"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="Last Name:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Doe"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="Email: "
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/EmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="jdoe@yahoo.com"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log Out" />
    </LinearLayout>

</LinearLayout>